--- a/app/deposit.html
+++ b/app/deposit.html
@@ -42,7 +42,6 @@
 						<li><a href="training.html">Обучение</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 						<li><a href="contacts.html">контакты</a></li>
-						<li><a href="index.html">Форум</a></li>
 					</ul>
 					<ul class="nav__login">
 						<li><img src="img/header-login.svg" alt=""><a href="login.html">Вход</a></li>
@@ -87,7 +86,7 @@
 				<div class="row">
 					<div class="col-lg-12 col-xl-9 offset-xl-1">
 
-						<div class="deposit__container deposit__beginner">
+						<form class="deposit__container deposit__beginner">
 
 							<ul class="deposit__list">
 								<li>
@@ -148,9 +147,9 @@
 									<button type="submit" class="btn" name="submit">создать депозит</button>
 								</div>
 							</div>
-						</div>
+						</form>
 
-						<div class="deposit__container deposit__basic">
+						<form class="deposit__container deposit__basic">
 
 							<ul class="deposit__list">
 								<li class="deposit__list_item deposit__list_item--on">beginner
@@ -208,15 +207,17 @@
 											<span id="basic__price_max" class="max"></span>
 										</div>
 									</div>
+									<input type="text" id="deposit--info" value="text">
+									<input type="text" id="deposit--info2" value="text">
 								</div>
 
 								<div class="deposit__content_btn">
 									<button type="submit" class="btn" name="submit">создать депозит</button>
 								</div>
 							</div>
-						</div>
+						</form>
 
-						<div class="deposit__container deposit__experience">
+						<form class="deposit__container deposit__experience">
 
 							<ul class="deposit__list">
 								<li class="deposit__list_item deposit__list_item--on">beginner
@@ -280,9 +281,9 @@
 									<button type="submit" class="btn" name="submit">создать депозит</button>
 								</div>
 							</div>
-						</div>
+						</form>
 
-						<div class="deposit__container deposit__partner">
+						<form class="deposit__container deposit__partner">
 
 							<ul class="deposit__list">
 								<li class="deposit__list_item deposit__list_item--on">beginner
@@ -346,9 +347,9 @@
 									<button type="submit" class="btn" name="submit">создать депозит</button>
 								</div>
 							</div>
-						</div>
+						</form>
 
-						<div class="deposit__container deposit__owner">
+						<form class="deposit__container deposit__owner">
 
 							<ul class="deposit__list">
 								<li class="deposit__list_item deposit__list_item--on">beginner
@@ -407,7 +408,7 @@
 									<button type="submit" class="btn" name="submit">создать депозит</button>
 								</div>
 							</div>
-						</div>
+						</form>
 
 					</div>
 				</div>
@@ -523,252 +524,253 @@
 	<script src="js/scripts.min.js"></script>
 
 	<script>
-	
-	$( function() {
-		// назви відповідають логіці
-		// перше слово назва блоку
-		// date - кількість днів
-		// price - кількість грошей
-		// min- мінімальне значення
-		// max- максимальне значення
+	  $( function() {
+    // назви відповідають логіці
+    // перше слово назва блоку
+    // date - кількість днів
+    // price - кількість грошей
+    // min- мінімальне значення
+    // max- максимальне значення
 
-		//------------------------------------------данні в переміних-------------------------
+    //------------------------------------------данні в переміних-------------------------
 
-			//--------------------------------------calculator-beginner-----------------------------
-				var beginner__date_min = 0;
-				$( "#beginner__date_min" ).text(beginner__date_min);
+      //--------------------------------------calculator-beginner-----------------------------
+        var beginner__date_min = 0;
+        $( "#beginner__date_min" ).text(beginner__date_min);
 
-				var beginner__date_max = 1;
-				$( "#beginner__date_max" ).text(beginner__date_max + " дней");
+        var beginner__date_max = 1;
+        $( "#beginner__date_max" ).text(beginner__date_max + " дней");
 
-				var beginner__price_min = 100;
-				$( "#beginner__price_min" ).text(beginner__price_min);
+        var beginner__price_min = 100;
+        $( "#beginner__price_min" ).text(beginner__price_min);
 
-				var beginner__price_max = 500;
-				$( "#beginner__price_max" ).text(beginner__price_max + " тенге");
+        var beginner__price_max = 500;
+        $( "#beginner__price_max" ).text(beginner__price_max + " тенге");
 
-			//--------------------------------------calculator-basic-----------------------------
-				var basic__date_min = 1;
-				$( "#basic__date_min" ).text(basic__date_min);
+      //--------------------------------------calculator-basic-----------------------------
+        var basic__date_min = 1;
+        $( "#basic__date_min" ).text(basic__date_min);
 
-				var basic__date_max = 31;
-				$( "#basic__date_max" ).text(basic__date_max + " дней");
+        var basic__date_max = 31;
+        $( "#basic__date_max" ).text(basic__date_max + " дней");
 
-				var basic__price_min = 1000;
-				$( "#basic__price_min" ).text(basic__price_min);
+        var basic__price_min = 1000;
+        $( "#basic__price_min" ).text(basic__price_min);
 
-				var basic__price_max = 5000;
-				$( "#basic__price_max" ).text(basic__price_max + " тенге");
+        var basic__price_max = 5000;
+        $( "#basic__price_max" ).text(basic__price_max + " тенге");
 
-			//--------------------------------------calculator-experience-----------------------------
-				var experience__date_min = 1;
-				$( "#experience__date_min" ).text(experience__date_min);
+      //--------------------------------------calculator-experience-----------------------------
+        var experience__date_min = 1;
+        $( "#experience__date_min" ).text(experience__date_min);
 
-				var experience__date_max = 31;
-				$( "#experience__date_max" ).text(experience__date_max + " дней");
+        var experience__date_max = 31;
+        $( "#experience__date_max" ).text(experience__date_max + " дней");
 
-				var experience__price_min = 10000;
-				$( "#experience__price_min" ).text(experience__price_min);
+        var experience__price_min = 10000;
+        $( "#experience__price_min" ).text(experience__price_min);
 
-				var experience__price_max = 25000;
-				$( "#experience__price_max" ).text(experience__price_max + " тенге");
+        var experience__price_max = 25000;
+        $( "#experience__price_max" ).text(experience__price_max + " тенге");
 
-			//--------------------------------------calculator-partner-----------------------------
-				var partner__date_min = 1;
-				$( "#partner__date_min" ).text(partner__date_min);
+      //--------------------------------------calculator-partner-----------------------------
+        var partner__date_min = 1;
+        $( "#partner__date_min" ).text(partner__date_min);
 
-				var partner__date_max = 31;
-				$( "#partner__date_max" ).text(partner__date_max + " дней");
+        var partner__date_max = 31;
+        $( "#partner__date_max" ).text(partner__date_max + " дней");
 
-				var partner__price_min = 50000;
-				$( "#partner__price_min" ).text(partner__price_min);
+        var partner__price_min = 50000;
+        $( "#partner__price_min" ).text(partner__price_min);
 
-				var partner__price_max = 250000;
-				$( "#partner__price_max" ).text(partner__price_max + " тенге");		
+        var partner__price_max = 250000;
+        $( "#partner__price_max" ).text(partner__price_max + " тенге");   
 
-			//--------------------------------------calculator-owner-----------------------------
-				var owner__date_min = 0;
-				$( "#owner__date_min" ).text(owner__date_min);
+      //--------------------------------------calculator-owner-----------------------------
+        var owner__date_min = 0;
+        $( "#owner__date_min" ).text(owner__date_min);
 
-				var owner__date_max = 1;
-				$( "#owner__date_max" ).text(owner__date_max + " дней");
+        var owner__date_max = 1;
+        $( "#owner__date_max" ).text(owner__date_max + " дней");
 
-				var owner__price_min = 1000000;
-				$( "#owner__price_min" ).text(owner__price_min);
+        var owner__price_min = 1000000;
+        $( "#owner__price_min" ).text(owner__price_min);
 
-				var owner__price_max = 10000000;
-				$( "#owner__price_max" ).text(owner__price_max + " тенге");
-
-
-		//------------------------------------------калькулятори беруть данні з переміних-------------------------
-
-			//--------------------------------------calculator-beginner-----------------------------
-			  //   var beginner = $( "#beginner--date-custom" );
-
-			  //   $( "#beginner--date" ).slider({
-					// range: "min",
-					// value: 0,
-					// min: beginner__date_min,
-					// max: beginner__date_max,
-			  //     create: function() {
-			  //       beginner.text( $( this ).slider( "value" ) );
-			  //     },
-			  //     slide: function( event, ui ) {
-			  //       beginner.text( ui.value );
-			  //       $( "#beginner--percent" ).val( ui.value * 100 + "%");
-			  //     }
-			  //   });
-			  //   $( "#beginner--percent" ).val( 0 + "%"  );
-
-				//------------------------------------
-		 		var beginnerprice = $( "#beginner--price" );
-			    $( "#beginner--custom-price" ).slider({
-					range: "min",
-					value: 0,
-					min: beginner__price_min,
-					max: beginner__price_max,
-					create: function() {
-			        	beginnerprice.text( $( this ).slider( "value" ) );
-			     	},
-			     	slide: function( event, ui ) {
-			        	beginnerprice.text( ui.value );
-			      	}
-			    });
+        var owner__price_max = 10000000;
+        $( "#owner__price_max" ).text(owner__price_max + " тенге");
 
 
-			//--------------------------------------calculator-basic-----------------------------
-			    var basic = $( "#basic--date-custom" );
-			    $( "#basic--date" ).slider({
-					range: "min",
-					value: 0,
-					min: basic__date_min,
-					max: basic__date_max,
-			      create: function() {
-			        basic.text( $( this ).slider( "value" ) );
-			      },
-			      slide: function( event, ui ) {
-			        basic.text( ui.value );
-			        $( "#basic--percent" ).val( ui.value * 3 + 7 + "%");
-			      }
-			    });
-			    $( "#basic--percent" ).val( 10 + "%"  );
+    //------------------------------------------калькулятори беруть данні з переміних-------------------------
 
-				//------------------------------------
-		 		var basicprice = $( "#basic--price" );
-			    $( "#basic--custom-price" ).slider({
-					range: "min",
-					value: 0,
-					min: basic__price_min,
-					max: basic__price_max,
-					create: function() {
-			        	basicprice.text( $( this ).slider( "value" ) );
-			     	},
-			     	slide: function( event, ui ) {
-			        	basicprice.text( ui.value );
-			      	}
-			    });
+      //--------------------------------------calculator-beginner-----------------------------
+        //   var beginner = $( "#beginner--date-custom" );
 
+        //   $( "#beginner--date" ).slider({
+          // range: "min",
+          // value: 0,
+          // min: beginner__date_min,
+          // max: beginner__date_max,
+        //     create: function() {
+        //       beginner.text( $( this ).slider( "value" ) );
+        //     },
+        //     slide: function( event, ui ) {
+        //       beginner.text( ui.value );
+        //       $( "#beginner--percent" ).val( ui.value * 100 + "%");
+        //     }
+        //   });
+        //   $( "#beginner--percent" ).val( 0 + "%"  );
 
-			//--------------------------------------calculator-experience-----------------------------
-			    var experience = $( "#experience--date-custom" );
-			    $( "#experience--date" ).slider({
-					range: "min",
-					value: 1,
-					min: experience__date_min,
-					max: experience__date_max,
-			      create: function() {
-			        experience.text( $( this ).slider( "value" ) );
-			      },
-			      slide: function( event, ui ) {
-			        experience.text( ui.value );
-			        $( "#experience--percent" ).val( ui.value * 3 + 7 + "%");
-			      }
-			    });
-			    $( "#experience--percent" ).val( 10 + "%" );
-
-				//------------------------------------
-		 		var experienceprice = $( "#experience--price" );
-			    $( "#experience--custom-price" ).slider({
-					range: "min",
-					value: 1,
-					min: experience__price_min,
-					max: experience__price_max,
-					create: function() {
-			        	experienceprice.text( $( this ).slider( "value" ) );
-			     	},
-			     	slide: function( event, ui ) {
-			        	experienceprice.text( ui.value );
-			      	}
-			    });
+        //------------------------------------
+        var beginnerprice = $( "#beginner--price" );
+          $( "#beginner--custom-price" ).slider({
+          range: "min",
+          value: 0,
+          min: beginner__price_min,
+          max: beginner__price_max,
+          create: function() {
+                beginnerprice.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+                beginnerprice.text( ui.value );
+              }
+          });
 
 
-			//--------------------------------------calculator-partner-----------------------------
-			    var partner = $( "#partner--date-custom" );
-			    $( "#partner--date" ).slider({
-					range: "min",
-					value: 0,
-					min: partner__date_min,
-					max: partner__date_max,
-			      create: function() {
-			        partner.text( $( this ).slider( "value" ) );
-			      },
-			      slide: function( event, ui ) {
-			        partner.text( ui.value );
-			        $( "#partner--percent" ).val( ui.value * 3 + 7 + "%" );
-			      }
-			    });
-			    $( "#partner--percent" ).val( 10 + "%" );
+      //--------------------------------------calculator-basic-----------------------------
+          var basic = $( "#basic--date-custom" );
+          $( "#basic--date" ).slider({
+          range: "min",
+          value: 0,
+          min: basic__date_min,
+          max: basic__date_max,
+            create: function() {
+              basic.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+              basic.text( ui.value );
+              $( "#basic--percent" ).val( ui.value * 3 + 7 + "%");
+              $( "#deposit--info" ).val(ui.value);
+            }
+          });
+          $( "#basic--percent" ).val( 10 + "%"  );
 
-				//------------------------------------
-		 		var partnerprice = $( "#partner--price" );
-			    $( "#partner--custom-price" ).slider({
-					range: "min",
-					value: 0,
-					min: partner__price_min,
-					max: partner__price_max,
-					create: function() {
-			        	partnerprice.text( $( this ).slider( "value" ) );
-			     	},
-			     	slide: function( event, ui ) {
-			        	partnerprice.text( ui.value );
-			      	}
-			    });
+        //------------------------------------
+        var basicprice = $( "#basic--price" );
+          $( "#basic--custom-price" ).slider({
+          range: "min",
+          value: 0,
+          min: basic__price_min,
+          max: basic__price_max,
+          create: function() {
+                basicprice.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+                basicprice.text( ui.value );
+                $( "#deposit--info2" ).val(ui.value);
+              }
+          });
 
 
-			//--------------------------------------calculator-owner-----------------------------
-			  	//     var owner = $( "#owner--date-custom" );
-				  //   $( "#owner--date" ).slider({
-						// range: "min",
-						// value: 0,
-						// min: 0,
-						// max: 1,
-				  //     create: function() {
-				  //       owner.text( $( this ).slider( "value" ) );
-				  //     },
-				  //     slide: function( event, ui ) {
-				  //       owner.text( ui.value );
-				  //       $( "#owner--percent" ).val( ui.value * 100 + "%");
-				  //     }
-				  //   });
-				  //   $( "#owner--percent" ).val( 0 + "%"  );
+      //--------------------------------------calculator-experience-----------------------------
+          var experience = $( "#experience--date-custom" );
+          $( "#experience--date" ).slider({
+          range: "min",
+          value: 1,
+          min: experience__date_min,
+          max: experience__date_max,
+            create: function() {
+              experience.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+              experience.text( ui.value );
+              $( "#experience--percent" ).val( ui.value * 3 + 7 + "%");
+            }
+          });
+          $( "#experience--percent" ).val( 10 + "%" );
+          $( "#experience--percent" ).val( ui.value * 3 + 7 + "%");
 
-		 		var ownerprice = $( "#owner--price" );
-			    $( "#owner--custom-price" ).slider({
-					range: "min",
-					value: 0,
-					min: 1000000,
-					max: 10000000,
-					create: function() {
-			        	ownerprice.text( $( this ).slider( "value" ) );
-			     	},
-			     	slide: function( event, ui ) {
-			        	ownerprice.text( ui.value );
-			      	}
-			    });
+        //------------------------------------
+        var experienceprice = $( "#experience--price" );
+          $( "#experience--custom-price" ).slider({
+          range: "min",
+          value: 1,
+          min: experience__price_min,
+          max: experience__price_max,
+          create: function() {
+                experienceprice.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+                experienceprice.text( ui.value );
+              }
+          });
 
-	  } );
 
-  
+      //--------------------------------------calculator-partner-----------------------------
+          var partner = $( "#partner--date-custom" );
+          $( "#partner--date" ).slider({
+          range: "min",
+          value: 0,
+          min: partner__date_min,
+          max: partner__date_max,
+            create: function() {
+              partner.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+              partner.text( ui.value );
+              $( "#partner--percent" ).val( ui.value * 3 + 7 + "%" );
+            }
+          });
+          $( "#partner--percent" ).val( 10 + "%" );
+
+        //------------------------------------
+        var partnerprice = $( "#partner--price" );
+          $( "#partner--custom-price" ).slider({
+          range: "min",
+          value: 0,
+          min: partner__price_min,
+          max: partner__price_max,
+          create: function() {
+                partnerprice.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+                partnerprice.text( ui.value );
+              }
+          });
+
+
+      //--------------------------------------calculator-owner-----------------------------
+          //     var owner = $( "#owner--date-custom" );
+          //   $( "#owner--date" ).slider({
+            // range: "min",
+            // value: 0,
+            // min: 0,
+            // max: 1,
+          //     create: function() {
+          //       owner.text( $( this ).slider( "value" ) );
+          //     },
+          //     slide: function( event, ui ) {
+          //       owner.text( ui.value );
+          //       $( "#owner--percent" ).val( ui.value * 100 + "%");
+          //     }
+          //   });
+          //   $( "#owner--percent" ).val( 0 + "%"  );
+
+        var ownerprice = $( "#owner--price" );
+          $( "#owner--custom-price" ).slider({
+          range: "min",
+          value: 0,
+          min: 1000000,
+          max: 10000000,
+          create: function() {
+                ownerprice.text( $( this ).slider( "value" ) );
+            },
+            slide: function( event, ui ) {
+                ownerprice.text( ui.value );
+              }
+          });
+
+    } );
+ 
   </script>
 
 
