--- a/app/index.html
+++ b/app/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-<!-- 
+
 	<div class="preloader">
 		<div class="pulse"></div>
-	</div> -->
+	</div>
 
 	<span id="up"></span>
 
@@ -42,7 +42,6 @@
 						<li><a href="training.html">Обучение</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 						<li><a href="contacts.html">контакты</a></li>
-						<li><a href="index.html">Форум</a></li>
 					</ul>
 					<ul class="nav__login">
 						<li><img src="img/header-login.svg" alt=""><a href="login.html">Вход</a></li>
@@ -214,7 +213,7 @@
 				<div class="swiper-container step__slider">
 					<div class="swiper-wrapper step__wrapper">
 
-						<div class="swiper-slide step__slide step__slide--yellow">
+						<div class="swiper-slide step__slide step__slide--active step__slide--yellow">
 							<h3>beginner</h3>
 							<ul>
 								<li>
