--- a/app/chat.html
+++ b/app/chat.html
@@ -42,7 +42,6 @@
 						<li><a href="training.html">Обучение</a></li>
 						<li><a href="faq.html">FAQ</a></li>
 						<li><a href="contacts.html">контакты</a></li>
-						<li><a href="index.html">Форум</a></li>
 					</ul>
 					<ul class="nav__login">
 						<li><img src="img/header-login.svg" alt=""><a href="login.html">Вход</a></li>
@@ -222,7 +221,7 @@
 					<span>© 2018 all rights reserved</span>
 				</div>
 				<div class="footer__col">
-					<button>privacy policy</a>
+					<a href="#">privacy policy</a>
 					<a href="#">Terms and Conditions</a>
 				</div>
 				<div class="footer__col">
